--- a/device-types/Server Technology/C2WG24SN-2CJN5D6.yml
+++ b/device-types/Server Technology/C2WG24SN-2CJN5D6.yml
@@ -1,12 +1,12 @@
 ---
 manufacturer: Server Technology
-model: C2WG24SN-2CJN5D6 (Primary)
-slug: server-technology-c2wg24sn-2cjn5d6
+model: c2wg24sn-2cjN5D6 (Primary)
+slug: server-technology-c2wg24sn-ycln5d6
 part_number: C2WG24SN-2CJN5D6
 u_height: 2
 is_full_depth: true
 airflow: passive
-comments: PRO2 Switched, Per-Outlet Power Sensing, Primary, 32A, 230V/400V, (12) C13 & (4) Cx/C19/C13
+comments: PRO2 Switched, Per-Outlet Power Sensing, Primary, 30A, 208V, (18) C13 & (6) Cx/C19/C13
 console-ports:
   - name: ser
     label: SER
@@ -24,9 +24,7 @@ console-server-ports:
     poe: true
 power-ports:
   - name: Power Port 1
-    type: 1  iec-60309-3p-n-e-6h
-  - name: Power Port 2
-    type: iec-60309-3p-n-e-6h
+    type: nema-l6-30p
 power-outlets:
   - name: Outlet 1
     type: iec-60320-c19
@@ -55,11 +53,11 @@ power-outlets:
   - name: Outlet 7
     type: iec-60320-c13
     power_port: Power Port 1
-    feed_leg: B
+    feed_leg: A
   - name: Outlet 8
     type: iec-60320-c13
     power_port: Power Port 1
-    feed_leg: B
+    feed_leg: A
   - name: Outlet 9
     type: iec-60320-c19
     power_port: Power Port 1
@@ -70,20 +68,60 @@ power-outlets:
     feed_leg: B
   - name: Outlet 11
     type: iec-60320-c13
-    power_port: Power Port 2
-    feed_leg: A
+    power_port: Power Port 1
+    feed_leg: B
   - name: Outlet 12
     type: iec-60320-c13
-    power_port: Power Port 2
-    feed_leg: A
+    power_port: Power Port 1
+    feed_leg: B
   - name: Outlet 13
     type: iec-60320-c19
-    power_port: Power Port 2
-    feed_leg: A
+    power_port: Power Port 1
+    feed_leg: B
   - name: Outlet 14
     type: iec-60320-c13
-    power_port: Power Port 2
-    feed_leg: A
+    power_port: Power Port 1
+    feed_leg: B
+  - name: Outlet 15
+    type: iec-60320-c13
+    power_port: Power Port 1
+    feed_leg: B
+  - name: Outlet 16
+    type: iec-60320-c13
+    power_port: Power Port 1
+    feed_leg: B
+  - name: Outlet 17
+    type: iec-60320-c19
+    power_port: Power Port 1
+    feed_leg: C
+  - name: Outlet 18
+    type: iec-60320-c13
+    power_port: Power Port 1
+    feed_leg: C
+  - name: Outlet 19
+    type: iec-60320-c13
+    power_port: Power Port 1
+    feed_leg: C
+  - name: Outlet 20
+    type: iec-60320-c13
+    power_port: Power Port 1
+    feed_leg: C
+  - name: Outlet 21
+    type: iec-60320-c19
+    power_port: Power Port 1
+    feed_leg: C
+  - name: Outlet 22
+    type: iec-60320-c13
+    power_port: Power Port 1
+    feed_leg: C
+  - name: Outlet 23
+    type: iec-60320-c13
+    power_port: Power Port 1
+    feed_leg: C
+  - name: Outlet 24
+    type: iec-60320-c13
+    power_port: Power Port 1
+    feed_leg: C
 interfaces:
   - name: net
     label: NET
