--- a/device-types/Server Technology/C2WG24SN-2CJN5D6.yml
+++ b/device-types/Server Technology/C2WG24SN-2CJN5D6.yml
@@ -1,7 +1,7 @@
 ---
 manufacturer: Server Technology
-model: c2wg24sn-2cjN5D6 (Primary)
-slug: server-technology-c2wg24sn-ycln5d6
+model: C2WG24SN-2CJN5D6 (Primary)
+slug: server-technology-c2wg24sn-2cjN5D6
 part_number: C2WG24SN-2CJN5D6
 u_height: 2
 is_full_depth: true
